--- a/WordPuzzle/wwwroot/css/styles.css
+++ b/WordPuzzle/wwwroot/css/styles.css
@@ -5,6 +5,15 @@
   /* border: 2px solid red; */
 }
 
+form {
+  width: 50%;
+  margin: auto;
+}
+
+input {
+  width: 100%;
+}
+
 .row {
   display: flex;
   justify-content: center;
