change styles to look closer to wordle

--- a/WordPuzzle/Views/Puzzle/Index.cshtml
+++ b/WordPuzzle/Views/Puzzle/Index.cshtml
@@ -27,7 +27,7 @@
           }
           else
           {
-            <div id=@($"row{i}-box{j}") class="letter-box">
+            <div id=@($"row{i}-box{j}") class="letter-box bg-secondary">
               <p class="letter-display text-center">@Model.Guesses[i][j]</p>
             </div>
           }
